--- a/argo-cd/values-local.yaml
+++ b/argo-cd/values-local.yaml
@@ -22,6 +22,7 @@ server:
       - url: https://github.com/dev-chulbuji/devops_k8s.git
 
     accounts.alice: apiKey, login
+    accounts.pjkfckr: apiKey, login
 
     dex.config: |
       connectors:
