--- a/argo-cd/values-local.yaml
+++ b/argo-cd/values-local.yaml
@@ -21,6 +21,7 @@ server:
     repositories: |
       - url: https://github.com/dev-chulbuji/devops_k8s.git
 
+    accounts.admin: apiKey, login
     accounts.alice: apiKey, login
     accounts.pjkfckr: apiKey, login
 
