--- a/argo-declarartive-setup-yaml/Application-helm.yaml
+++ b/argo-declarartive-setup-yaml/Application-helm.yaml
@@ -9,7 +9,7 @@ spec:
     server: 'https://kubernetes.default.svc'
   project: dev
   source:
-    repoURL: https://github.com/dev-chulbuji/devops_k8s.git
+    repoURL: https://github.com/pjkfckr/GitOps_k8s.git
     targetRevision: HEAD
     path: sample-helm-1
     helm:
