--- a/argo-cd/values-local.yaml
+++ b/argo-cd/values-local.yaml
@@ -19,7 +19,7 @@ server:
     url: http://127.0.0.1:30080
 
     repositories: |
-      - url: https://github.com/dev-chulbuji/devops_k8s.git
+      - url: 'https://github.com/pjkfckr/GitOps_k8s.git'
 
     accounts.admin: apiKey, login
     accounts.alice: apiKey, login
