--- a/app-of-apps/values-local.yaml
+++ b/app-of-apps/values-local.yaml
@@ -40,7 +40,7 @@ apps:
       customValues: true
       values:
         - values-local.yaml
-  - name: demo-application
+  - name: demo
     project: dev
     namespace: default
     source:
@@ -56,7 +56,7 @@ apps:
     source:
       path: sample-helm-2
   - name: sample-helm-3
-      project: dev
-      namespace: default
-      source:
-        path: sample-helm-3
+    project: dev
+    namespace: default
+    source:
+      path: sample-helm-3
