--- a/argo-cd/values-local.yaml
+++ b/argo-cd/values-local.yaml
@@ -22,8 +22,6 @@ server:
       - url: 'https://github.com/pjkfckr/GitOps_k8s.git'
 
     accounts.admin: apiKey, login
-    accounts.alice: apiKey, login
-    accounts.pjkfckr: apiKey, login
 
     dex.config: |
       connectors:
@@ -31,26 +29,18 @@ server:
           id: github
           name: GitHub
           config:
-            clientID: xxx
-            clientSecret: xxx
+            clientID: c509e7c366a63729d7ff
+            clientSecret: 30098e178e6cd44b370d19ea3ff62cd40fd48689
             orgs:
-            - name: xxx
+            - name: park-single-organization
 
   rbacConfig:
     policy.default: role:readonly
-    policy.csv: |
-      p, role:local-user-admin, applications, *, */*, allow
-      g, alice, role:local-user-admin
-
+    policy.csv: | 
       p, role:org-devops, applications, *, */*, allow
       p, role:org-devops, clusters, *, *, allow
       p, role:org-devops, repositories, *, *, allow
-      g, xxx:devops, role:org-devops
-
-      p, role:org-backend, applications, get, */*, allow
-      p, role:org-backend, clusters, get, *, allow
-      p, role:org-backend, repositories, get, *, allow
-      g, xxx:backend, role:org-backend
+      g, park-single-organization:devops, role:org-devops
 
 redis:
   enabled: true
