--- a/app-of-apps/values-local.yaml
+++ b/app-of-apps/values-local.yaml
@@ -1,45 +1,45 @@
 repoURL: 'https://github.com/pjkfckr/GitOps_k8s.git'
 apps:
-  - name: prometheus-operator
-    project: dev
-    namespace: prom
-    source:
-      path: kube-prometheus-stack
-      customValues: true
-      values:
-        - values-local.yaml
-  - name: prometheus
-    project: dev
-    namespace: prom
-    source:
-      path: prometheus
-      customValues: true
-      values:
-        - values-local.yaml
-  - name: grafana
-    project: dev
-    namespace: grafana
-    source:
-      path: grafana
-      customValues: true
-      values:
-        - values-local.yaml
-  - name: logstash
-    project: default
-    namespace: elastic
-    source:
-      path: logstash
-      customValues: true
-      values:
-        - values-local.yaml
-  - name: filebeat
-    project: default
-    namespace: elastic
-    source:
-      path: filebeat
-      customValues: true
-      values:
-        - values-local.yaml
+#  - name: prometheus-operator
+#    project: dev
+#    namespace: prom
+#    source:
+#      path: kube-prometheus-stack
+#      customValues: true
+#      values:
+#        - values-local.yaml
+#  - name: prometheus
+#    project: dev
+#    namespace: prom
+#    source:
+#      path: prometheus
+#      customValues: true
+#      values:
+#        - values-local.yaml
+#  - name: grafana
+#    project: dev
+#    namespace: grafana
+#    source:
+#      path: grafana
+#      customValues: true
+#      values:
+#        - values-local.yaml
+#  - name: logstash
+#    project: default
+#    namespace: elastic
+#    source:
+#      path: logstash
+#      customValues: true
+#      values:
+#        - values-local.yaml
+#  - name: filebeat
+#    project: default
+#    namespace: elastic
+#    source:
+#      path: filebeat
+#      customValues: true
+#      values:
+#        - values-local.yaml
   - name: demo
     project: dev
     namespace: default
