--- a/demo/values.yaml
+++ b/demo/values.yaml
@@ -1,7 +1,7 @@
 replicas: 1
 image:
-  repository: 552661052297.dkr.ecr.ap-northeast-2.amazonaws.com/demo
-  tag: 1.2.6
+  repository: 198495179858.dkr.ecr.ap-northeast-2.amazonaws.com/deploy-ecotag
+  tag: 1.0.1
   imagePullSecrets:
     - name: ecr-cred
 service:
