eks-load-balancer 수정

--- a/app-of-apps/values-eks.yaml
+++ b/app-of-apps/values-eks.yaml
@@ -8,19 +8,19 @@ apps:
       customValues: true
       values:
         - values-eks.yaml
-  - name: prometheus
-    project: default
-    namespace: prom
-    source:
-      path: prometheus
-      customValues: true
-      values:
-        - values-eks.yaml
-  - name: grafana
-    project: default
-    namespace: grafana
-    source:
-      path: grafana
-      customValues: true
-      values:
-        - values-eks.yaml
+#  - name: prometheus
+#    project: default
+#    namespace: prom
+#    source:
+#      path: prometheus
+#      customValues: true
+#      values:
+#        - values-eks.yaml
+#  - name: grafana
+#    project: default
+#    namespace: grafana
+#    source:
+#      path: grafana
+#      customValues: true
+#      values:
+#        - values-eks.yaml
